@@ -39,6 +39,7 @@ Changes in v0.18.0:
  11/ Add __members__ attribute to exiv2 "data" structure types.
  12/ Deprecated keys(), values(), and items() methods and iterator of exiv2
      "data" structure types.
+ 13/ API CHANGE: exiv2.LogMsg.pythonHandler is replaced by exiv2.pythonHandler
 
 Changes in v0.17.5:
   1/ Binary wheels incorporate libexiv2 v0.28.7.
